--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ deploy:
   bucket_name: "elasticbeanstalk-ap-northeast-2-678590436186"
   bucket_path: "docker-react-app"
   on:
-    branch: master
+    branch: main
+
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_ACCESS_KEY
